--- a/index.html
+++ b/index.html
@@ -1,94 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <script src="https://unpkg.com/@gitgraph/js"></script>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="manifest" href="manifest.json">
-    <!-- ios support -->
-    <link rel="apple-touch-icon" href="images/icons/icon-72x72.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-96x96.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-128x128.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-144x144.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-192x192.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-384x384.png">
-    <link rel="apple-touch-icon" href="images/icons/icon-512x512.png">
-    <meta name="apple-mobile-web-app-status-bar" content="#db4938">
-    <meta name="theme-color" content="#db4938">
-    <title>A-Team Recipes</title>
+    <!-- Bootstrap CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <title>Hello, world!</title>
   </head>
   <body>
-  <!-- DOM element in which we'll mount our graph -->
-  <div id="graph-container"></div>
-
-  <!-- Use the `GitgraphJS` global variable to create your graph -->
-  <script>
-    // Get the graph container HTML element.
-    
-    var graphContainer = document.getElementById("graph-container");
-
-    var withoutHash = GitgraphJS.templateExtend(GitgraphJS.Metro, {
-      commit: {
-        message: {
-          displayHash: false,
-          displayAuthor: false,
-        },
-      },
-      branch: {
-        label: {
-          display: false,
-        },
-      },
-    });
-
-    var gitgraph = GitgraphJS.createGitgraph(graphContainer, {
-      template: withoutHash,
-      //orientation: "vertical-reverse",
-      //mode: GitgraphJS.Mode.Compact,
-    });
-
-    var brown_sugar = gitgraph.branch('Brown Sugar')
-    var caster_sugar = gitgraph.branch('Caster Sugar')
-
-    var end = gitgraph.branch('Start').commit('').tag('Done!');
-    end.commit('Step 10 - Bake for 20-25min');
-    end.commit('Step 9 - Boil bagels for 3 min, flipping after 2 min');
-    end.commit('Step 8 - Poke a hole through the centre of each ball to form a ring');
-    
-    end.commit('Step 7 - Dissolve Sugar into Water');
-    brown_sugar.merge(end,'2 tbsp').tag('Brown Sugar')
-    caster_sugar.merge(end,'1 tbsp').tag('Caster Sugar')
-
-    end.commit('Step 6 - Bring a large pan of water to boil');
-    end.commit('Step 5 - Preheat Oven to 220C');
-    end.commit('Step 4 - Cover and let rest for 30min');
-    end.commit('Step 3 - Transfer onto Floured Board and Divide into 8 Balls');
-    end.commit('Step 2 - Put Dough in an Oiled Bowl and Cover. Leave in Fridge to Rise for 12 hrs');
-    end.commit('Step 1 - Kneed, Medium-Low Speed for 10 min');
-
-    var brown_sugar1 = gitgraph.branch('Brown Sugar1')
-    var kosher_salt = gitgraph.branch('Kosher Salt')
-    var bread_flour = gitgraph.branch('Bread Flour');
-    var warm_water = gitgraph.branch('Warm Water');
-    var dry_yeast = gitgraph.branch('Dry Yeast');
-
-    brown_sugar1.merge(end,'1 tbsp').tag('Brown Sugar ')
-    kosher_salt.merge(end,'2 tsp').tag('Kosher Salt')
-    bread_flour.merge(end,'4 cups').tag('Bread Flour')
-    warm_water.merge(end,'1.5 cups').tag('Warm Water')
-    dry_yeast.merge(end,'1 tbsp').tag('Dry Yeast')
+    <div class="container-fluid">
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Bagels</h5>
+              <p class="card-text">Recipe for Bagels</p>
+              <a href="/bagels.html" class="btn btn-primary stretched-link">See Profile</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Vege Ragu</h5>
+              <p class="card-text">Recipe for Ragu (aka Mushroom Minefield)</p>
+              <a href="/ragu.html" class="btn btn-primary stretched-link">See Profile</a>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
-    end.commit('')
+    </div>
 
 
 
-  </script>
-  <script src="js/app.js"></script>
+
+    <script src="js/app.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
-
