--- a/index.html
+++ b/index.html
@@ -7,39 +7,20 @@
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <title>Hello, world!</title>
+    <link rel="manifest" href="manifest.json">
+    
+    <title>JOL Recipes</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Bagels</h5>
-              <p class="card-text">Recipe for Bagels</p>
-              <a href="/bagels.html" class="btn btn-primary stretched-link">See Profile</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Vege Ragu</h5>
-              <p class="card-text">Recipe for Ragu (aka Mushroom Minefield)</p>
-              <a href="/ragu.html" class="btn btn-primary stretched-link">See Profile</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
+    <div class="jumbotron">
+      <h1 class="display-3">Hello There!</h1>
+      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+      <hr class="my-4">
+      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="/list.html" role="button">See the List...</a>
+      </p>
     </div>
-
-
-
 
     <script src="js/app.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
