--- a/list.html
+++ b/list.html
@@ -12,40 +12,87 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="/index.html">A-Team Recipes</a>
+      <a class="navbar-brand" href="/index.html">JOL Recipe Book</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/list.html">List
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-        </ul>
-      </div>
     </nav>
 
-    <div class="container-fluid">
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
-          <div class="card-header">Bagels</div>
-          <div class="card-body">
-            <p class="card-text">~12 Hour Rise Time, 30min Effort</p>
-            <a href="/bagels.html" class="btn btn-primary stretched-link">See Details</a>
+    <div class="container">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
+        <li class="breadcrumb-item active">List</li>
+      </ol>
+      <div class="row">
+        <div class="col-lg-12">
+          <h2>Recipes</h2>
+        </div>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card text-white bg-primary mb-3">
+            <div class="card-header">Recipe 1</div>
+            <div class="card-body">
+              <h4 class="card-title">Bagels</h4>
+              <p class="card-text">12 hours, 30min effort</p>
+              <a href="/bagels.html" class="btn btn-secondary stretched-link">See Details</a>
+            </div>
           </div>
         </div>
-        <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
-          <div class="card-header">Ragu</div>
-          <div class="card-body">
-            <p class="card-text">2 Hrs Total, 30min Effort</p>
-            <a href="/ragu.html" class="btn btn-primary stretched-link">See Details</a>
+        <div class="col">
+          <div class="card text-white bg-primary mb-3">
+            <div class="card-header">Recipe 2</div>
+            <div class="card-body">
+              <h4 class="card-title">Vege Ragu</h4>
+              <p class="card-text">2 hrs, 30min effort</p>
+              <a href="/ragu.html" class="btn btn-secondary stretched-link">See Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-white bg-primary mb-3">
+            <div class="card-header">Recipe 3</div>
+            <div class="card-body">
+              <h4 class="card-title">#</h4>
+              <p class="card-text">#</p>
+              <a href="#" class="btn btn-secondary stretched-link">See Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-white bg-primary mb-3">
+            <div class="card-header">Recipe 4</div>
+            <div class="card-body">
+              <h4 class="card-title">#</h4>
+              <p class="card-text">#</p>
+              <a href="#" class="btn btn-secondary stretched-link">See Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-white bg-primary mb-3">
+            <div class="card-header">Recipe 5</div>
+            <div class="card-body">
+              <h4 class="card-title">#</h4>
+              <p class="card-text">#</p>
+              <a href="#" class="btn btn-secondary stretched-link">See Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-white bg-primary mb-3">
+            <div class="card-header">Recipe 6</div>
+            <div class="card-body">
+              <h4 class="card-title">#</h4>
+              <p class="card-text">#</p>
+              <a href="#" class="btn btn-secondary stretched-link">See Details</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
+    <script src="js/app.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
