--- a/ragu.html
+++ b/ragu.html
@@ -45,23 +45,21 @@
   <body>
   <!-- DOM element in which we'll mount our graph -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="/index.html">A-Team Recipes</a>
+      <a class="navbar-brand" href="/index.html">JOL Recipe Book</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/list.html">List
-            </a>
-          </li>
-        </ul>
-      </div>
     </nav>
 
-    <div id="graph-container1" class="svg-container"></div>
-    <div id="graph-container2" class="svg-container"></div>
-    <div id="graph-container3" class="svg-container"></div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="/list.html">List</a></li>
+      <li class="breadcrumb-item active">Ragu</li>
+    </ol>
+
+    <div id="graph-container1" class="svg-container mx-4"></div>
+    <div id="graph-container2" class="svg-container mx-4"></div>
+    <div id="graph-container3" class="svg-container mx-4"></div>
   
     <!-- Use the `GitgraphJS` global variable to create your graph -->
     <script>
@@ -169,7 +167,8 @@
 
 
     </script>
-  
+    
+    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     
   </body>
