--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
-    
+
     <title>JOL Recipes</title>
   </head>
   <body>
-    <div class="jumbotron">
-      <h1 class="display-3">Hello There!</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-      <hr class="my-4">
-      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" href="/list.html" role="button">See the List...</a>
-      </p>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-3">Hello There!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="/list.html" role="button">See the List...</a>
+        </p>
+      </div>
     </div>
 
     <script src="js/app.js"></script>
