--- a/list.html
+++ b/list.html
@@ -11,14 +11,13 @@
     <title>JOL Recipes</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="/index.html">JOL Recipe Book</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </nav>
-
     <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="/index.html">JOL Recipe Book</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </nav>
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
         <li class="breadcrumb-item active">List</li>
@@ -31,19 +30,25 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card text-white bg-primary mb-3">
-            <div class="card-header">Recipe 1</div>
             <div class="card-body">
               <h4 class="card-title">Bagels</h4>
-              <p class="card-text">12 hours, 30min effort</p>
+              <p>
+                <span class="badge badge-pill badge-success">Vege</span>
+                <span class="badge badge-pill badge-info">Stand Mixer</span>
+              </p>
+              <p class="card-text">12 hours to Complete, 30min effort</p>
               <a href="/bagels.html" class="btn btn-secondary stretched-link">See Details</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card text-white bg-primary mb-3">
-            <div class="card-header">Recipe 2</div>
             <div class="card-body">
               <h4 class="card-title">Vege Ragu</h4>
+              <p>
+                <span class="badge badge-pill badge-success">Vege</span>
+                <span class="badge badge-pill badge-info">Food Processor</span>
+              </p>
               <p class="card-text">2 hrs, 30min effort</p>
               <a href="/ragu.html" class="btn btn-secondary stretched-link">See Details</a>
             </div>
@@ -51,7 +56,6 @@
         </div>
         <div class="col">
           <div class="card text-white bg-primary mb-3">
-            <div class="card-header">Recipe 3</div>
             <div class="card-body">
               <h4 class="card-title">#</h4>
               <p class="card-text">#</p>
@@ -61,7 +65,6 @@
         </div>
         <div class="col">
           <div class="card text-white bg-primary mb-3">
-            <div class="card-header">Recipe 4</div>
             <div class="card-body">
               <h4 class="card-title">#</h4>
               <p class="card-text">#</p>
@@ -71,7 +74,6 @@
         </div>
         <div class="col">
           <div class="card text-white bg-primary mb-3">
-            <div class="card-header">Recipe 5</div>
             <div class="card-body">
               <h4 class="card-title">#</h4>
               <p class="card-text">#</p>
@@ -81,7 +83,6 @@
         </div>
         <div class="col">
           <div class="card text-white bg-primary mb-3">
-            <div class="card-header">Recipe 6</div>
             <div class="card-body">
               <h4 class="card-title">#</h4>
               <p class="card-text">#</p>
