--- a/list.html
+++ b/list.html
@@ -57,8 +57,12 @@
         <div class="col">
           <div class="card text-white bg-primary mb-3">
             <div class="card-body">
-              <h4 class="card-title">#</h4>
-              <p class="card-text">#</p>
+              <h4 class="card-title">Pizza Dough</h4>
+              <p>
+                <span class="badge badge-pill badge-success">Vege</span>
+                <span class="badge badge-pill badge-info">Stand Mixer</span>
+              </p>
+              <p class="card-text">2 hrs, 30min effort</p>
               <a href="#" class="btn btn-secondary stretched-link">See Details</a>
             </div>
           </div>
