--- a/ragu.html
+++ b/ragu.html
@@ -46,24 +46,120 @@
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#equipment">Equipment</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#method">Method</a>
-        </li>
       </ul>
       <div id="myTabContent" class="tab-content">
         <div class="tab-pane fade active show" id="ingredients">
-          <div class="col-lg-5">
-            <ul class="list-group">
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>Plum Tomatos</span>&emsp;<em text-muted>3 to 4 (~350 g)</em>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>Garlic</span>&emsp;<em text-muted>4 Cloves</em>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>Dired Porcini</span>&emsp;<em text-muted>60 g</em>
-              </li>
-            </ul>
+          <div class="row">
+            <div class="col-lg-4">
+              <ul class="list-group">
+                <h5 class="mt-2">Vegetables</h3>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Plum Tomatos</span>
+                  <em text-muted>3 to 4 (~350 g)</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Dired Porcini</span>
+                  <em text-muted>60 g</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Oyster Mushrooms</span>
+                  <em text-muted>300 g</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Onions</span>
+                  <em text-muted>2 Medium</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Carrots</span>
+                  <em text-muted>3 Medium</em>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-4">
+              <ul class="list-group">
+                <h5 class="mt-2">Herbs and Spices</h3>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Garlic</span>
+                  <em text-muted>4 Cloves</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Cumin Seeds, Ground</span>
+                  <em text-muted>2 Tsp</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Soy Sauce</span>
+                  <em text-muted>90 mL</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Tomato Paste</span>
+                  <em text-muted>4 Tbsp</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Rose Harissa</span>
+                  <em text-muted>40 g</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">White Miso</span>
+                  <em text-muted>70 g</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Olive Oil</span>
+                  <em text-muted>250 mL</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Salt</span>
+                  <em text-muted>1/3 Tsp</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Pepper</span>
+                  <em text-muted>1/4 Tsp</em>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-4">
+              <ul class="list-group">
+                <h5 class="mt-2">Pantry</h3>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Red Wine</span>
+                  <em text-muted>100 mL</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Coconut Cream</span>
+                  <em text-muted>160 g</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Pearl Barley</span>
+                  <em text-muted>100 g</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Green Lentils</span>
+                  <em text-muted>180 g</em>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <input type="checkbox" aria-label="Checkbox for following text input">&emsp;
+                  <span class="flex-grow-1">Vegetable Stock</span>
+                  <em text-muted>1 mL</em>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="tab-pane fade" id="equipment">
@@ -72,11 +168,6 @@
               <a href="#" class="list-group-item list-group-item-action">Large Baking Tray</a>
               <a href="#" class="list-group-item list-group-item-action">Food Processor</a>
             </div>
-          </div>
-        </div>
-        <div class="tab-pane fade" id="method">
-          <div class="col-lg-12">
-            
           </div>
         </div>
       </div>
