--- a/list.html
+++ b/list.html
@@ -63,7 +63,7 @@
                 <span class="badge badge-pill badge-info">Stand Mixer</span>
               </p>
               <p class="card-text">2 hrs, 30min effort</p>
-              <a href="#" class="btn btn-secondary stretched-link">See Details</a>
+              <a href="/svg.html" class="btn btn-secondary stretched-link">See Details</a>
             </div>
           </div>
         </div>
