--- a/ragu.html
+++ b/ragu.html
@@ -46,6 +46,9 @@
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#equipment">Equipment</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#method">Method</a>
+        </li>
       </ul>
       <div id="myTabContent" class="tab-content">
         <div class="tab-pane fade active show" id="ingredients">
@@ -170,12 +173,17 @@
             </div>
           </div>
         </div>
+        <div class="tab-pane fade" id="method">
+          <div class="col-lg-12">
+            <img src="design/design.001.jpeg">
+            
+          </div>
+        </div>
       </div>
       <p> </p>
-      <div id="graph-container1" class="svg-container mx-4"></div>
-      <div id="graph-container2" class="svg-container mx-4"></div>
-      <div id="graph-container3" class="svg-container mx-4"></div>
-   
+
+
+      
    
     </div>
 
