--- a/svg.html
+++ b/svg.html
@@ -125,8 +125,8 @@
         </div>
         <p> </p>
 
-        <svg viewBox="0 0 500 500"><circle cx="5" cy="5" r="5" fill="Green"></circle><circle cx="5" cy="25" r="5" fill="Green"></circle><circle cx="5" cy="45" r="5" fill="Green"></circle><circle cx="5" cy="65" r="5" fill="Green"></circle><circle cx="5" cy="85" r="5" fill="Green"></circle><circle cx="5" cy="105" r="5" fill="Green"></circle><circle cx="5" cy="125" r="5" fill="Green"></circle><circle cx="5" cy="145" r="5" fill="Green"></circle><circle cx="5" cy="165" r="5" fill="Green"></circle><circle cx="5" cy="185" r="5" fill="Green"></circle></svg>
-
+        <svg viewBox="0 0 500 500"><circle cx="10" cy="10" r="5" fill="Green"></circle><text x="25" y="11" font-size="10pt">Kneed, Medium-Low Speed in a stand mixer</text><circle cx="10" cy="30" r="5" fill="Green"></circle><text x="25" y="31" font-size="10pt">Put Dough in an Oiled Bowl and Cover. Leave in Fridge to Rise</text><circle cx="10" cy="50" r="5" fill="Green"></circle><text x="25" y="51" font-size="10pt">Transfer onto Floured Board and Divide into 8 Balls. Kneed and roll balls until smooth</text><circle cx="10" cy="70" r="5" fill="Green"></circle><text x="25" y="71" font-size="10pt">Cover and let rest</text><circle cx="10" cy="90" r="5" fill="Green"></circle><text x="25" y="91" font-size="10pt">Preheat Oven to 220C</text><circle cx="10" cy="110" r="5" fill="Green"></circle><text x="25" y="111" font-size="10pt">Bring a large pan of water to boil</text><circle cx="10" cy="130" r="5" fill="Green"></circle><text x="25" y="131" font-size="10pt">Dissolve Sugar into Water</text><circle cx="10" cy="150" r="5" fill="Green"></circle><text x="25" y="151" font-size="10pt">Poke a hole through the centre of each ball to 
+            form a ring</text><circle cx="10" cy="170" r="5" fill="Green"></circle><text x="25" y="171" font-size="10pt">Boil bagels in batches, flipping after 2 min</text><circle cx="10" cy="190" r="5" fill="Green"></circle><text x="25" y="191" font-size="10pt">Bake</text></svg> 
     </div>
 
 
